fix soundinfo width on small screens

--- a/src/SoundInfo/SoundInfo.css
+++ b/src/SoundInfo/SoundInfo.css
@@ -31,6 +31,6 @@
 @media screen and (max-width: 640px) {
   .SoundInfo {
     right: 0px;
-    width: calc(100% - 20px);
+    width: calc(100% - 2px);
   }
 }
